2009-07-19  Philip Withnall  <philip@tecnocode.co.uk>

	* data/fullscreen.glade:
	* data/mozilla-viewer.glade:
	* data/playlist.glade:
	* data/plugins.glade:
	* data/properties.glade:
	* data/totem.glade:
	* data/uri.glade: Removed glade files; Glade can now edit GtkBuilder
	UI files.

2009-07-18  Philip Withnall  <philip@tecnocode.co.uk>

	* src/backend/bacon-resize.c (bacon_resize_resize),
	(bacon_resize_restore):
	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_open), (bacon_video_widget_seek_time),
	(bacon_video_widget_set_logo):
	* src/backend/bacon-video-widget.h:
	* src/backend/bvw-test.c (test_bvw_set_mrl), (on_redirect),
	(on_eos_event), (main):
	* src/backend/video-utils.c (totem_time_to_string),
	(totem_time_to_string_text):
	* src/plugins/brasero-disc-recorder/totem-disc-recorder.c
	(totem_disc_recorder_plugin_start_burning):
	* src/plugins/properties/bacon-video-widget-properties.c
	(bacon_video_widget_properties_from_time):
	* src/plugins/properties/bacon-video-widget-properties.h:
	* src/plugins/publish/totem-publish.c
	(totem_publish_plugin_playlist_cb):
	* src/plugins/screenshot/totem-gallery.c
	(dialog_response_callback):
	* src/plugins/screenshot/totem-screenshot.c (drag_data_get):
	* src/plugins/skipto/totem-skipto-plugin.c
	(totem_skipto_update_from_state):
	* src/plugins/skipto/totem-skipto.c (totem_skipto_update_range),
	(totem_skipto_get_range), (totem_skipto_set_current):
	* src/plugins/skipto/totem-skipto.h:
	* src/plugins/totem-plugins-engine.c (load_plugin_module),
	(totem_plugins_engine_plugin_active_cb),
	(totem_plugins_engine_plugin_visible_cb):
	* src/plugins/youtube/totem-youtube.c (starting_video_cb):
	* src/totem-menu.c (add_lang_action), (totem_action_add_recent):
	* src/totem-object.c (totem_get_title_at_playlist_pos),
	(totem_action_load_media), (window_state_event_cb),
	(totem_action_set_mrl_with_warning), (totem_time_within_seconds),
	(totem_seek_time_rel), (drop_video_cb), (drag_motion_video_cb),