@@ -468,9 +468,10 @@
             <menuitem name="next-angle" action="next-angle"/>
 	    <menuitem name="show-controls" action="show-controls"/>
             <separator/>
-	    <menuitem name="select-subtitle" action="select-subtitle"/>
-	    <placeholder name="subtitle-download-placeholder"/>
             <menu name="subtitles" action="subtitles-menu">
+               <menuitem name="select-subtitle" action="select-subtitle"/>
+	       <placeholder name="subtitle-download-placeholder"/>
+	       <separator/>
                <placeholder name="placeholder"/>
             </menu>
             <separator/>
