@@ -1,5 +1,12 @@
 2009-07-19  Philip Withnall  <philip@tecnocode.co.uk>
 
+	* data/totem.ui:
+	* src/plugins/opensubtitles/opensubtitles.py:
+	* src/totem-menu.c (totem_subtitles_update): Move subtitles-related
+	menu items to View → Subtitles. (Closes: #581366)
+
+2009-07-19  Philip Withnall  <philip@tecnocode.co.uk>
+
 	* data/fullscreen.glade:
 	* data/mozilla-viewer.glade:
 	* data/playlist.glade:
